crates/reinhardt-pages/tests/ui/style/fail/style_def_nonempty_arguments.rs
use reinhardt_pages::{style_def};

#[style_def(configured)]
static STYLES: CardStyles = style! { .card { color: red; } };

fn main() {}
